[gd_scene load_steps=44 format=2]

[ext_resource path="res://Assets/Platform/Player/player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Platform/Player/death.png" type="Texture" id=2]
[ext_resource path="res://Scripts/PlatformPlayer.gd" type="Script" id=3]
[ext_resource path="res://Assets/Prologue/Locations/light.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Overlap/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Platform/Objects/hp.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Death",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=25]
height = 10.0

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.52082, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=27]
colors = PoolColorArray( 1, 0.5, 0.5, 1, 0.152941, 0.2, 0.580392, 1 )

[sub_resource type="CircleShape2D" id=28]
radius = 18.0

[sub_resource type="CapsuleShape2D" id=29]
radius = 12.0
height = 6.0

[sub_resource type="Animation" id=30]
resource_name = "Damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.294118, 0.294118, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 21, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 21, 0, 21, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 42, 0, 21, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 0, 16, 21, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 21, 16, 21, 16 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "default",
"speed": 7.0
} ]

[node name="PlatformPlayer" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 24 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 25 )

[node name="DashParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 80
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 19.0
angular_velocity = -182.0
scale_amount = 0.04
scale_amount_curve = SubResource( 26 )
color_ramp = SubResource( 27 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 28 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 30 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HP1" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 15, 15 )
scale = Vector2( 3, 3 )
frames = SubResource( 36 )
centered = false

[node name="HP2" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 78, 15 )
scale = Vector2( 3, 3 )
frames = SubResource( 36 )
centered = false

[node name="HP3" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 141, 15 )
scale = Vector2( 3, 3 )
frames = SubResource( 36 )
centered = false

[node name="HP4" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 204, 15 )
scale = Vector2( 3, 3 )
frames = SubResource( 36 )
centered = false

[node name="HP5" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 267, 15 )
scale = Vector2( 3, 3 )
frames = SubResource( 36 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = -19.0
margin_top = -31.0
margin_right = 21.0
margin_bottom = -17.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]

[editable path="Hitbox"]
[editable path="HurtBox"]
